   * fix various minor bugs with attack filtering
   * fix bug where max_experience of stored units was not the true max when
     playing with under 100% exp. settings
   * prevent some negative/nonsense values in direct WML unit modifications
   * Renamed the advanceto key in [unit_type] to advances_to in order to be
     consistent with its own and [unit]'s internals.
 * Networking
   * removed null termination character from end of packet send by wesnoth
 * Miscellaneous and bug fixes:
   * Changed side_drop handling not to automaticaly assign AI for side if
     leader is dead (bug #12186)
   * Changed the behavior of [modify_turns] value= to default to -1
     (no turn limit) instead of 50 if an invalid string is passed instead
     of a number.
   * Fixed [modify_turns] causing weird behavior when used in prestart
     or start events to change current turn.
   * Made config cache code available to eveverywhere in wesnoth
   * Fixed [modify_turns] giving the unwanted side-effect of changing
     turn limit when only current= modifier was used.
   * Fixed OOS bug when giving control and having move in undo stack.
   * Fixed [modify_turns] not updating $turn_number when current= was
     used.
   * Fixed a few inconsistencies related to scenarios which are not at
     turn 1 at the beginning (namely start autosave detection and initial
     triggering of a matching "turn *" event).
   * Removed the compiler work arounds for MSVC6.
   * Added some more compiler workarounds for MSVC9.

Version 1.5.3:
 * Campaigns
   * Descent into Darkness
     * Changed how the beginning of the scenario 'Descent into Darkness' works.
     * Changed how the ice breakage works in 'Beginning of the Revenge'.
     * Many minor fixes and tweaks to various scenarios.
     * New graphics for Apprentice Necromancer and Dark Mage.
     * New indoor maps for 'A Small Favor' parts 2 and 3.
   * Sceptre of Fire
     * Fixed a bug that allowed one to finish 'The Dragon' by defeating both