@@ -1564,9 +1564,10 @@ namespace {
 		gamemap::location loc = cfg_to_loc(cfg);
 		std::string img = cfg["image"];
 		std::string halo = cfg["halo"];
+		std::string team_name = cfg["team_name"];
 		assert(state_of_game != NULL);
 		if(!img.empty() || !halo.empty()) {
-			(screen)->add_overlay(loc,img,halo);
+			(screen)->add_overlay(loc, img, halo, team_name);
 			(screen)->invalidate(loc);
 			(screen)->draw();
 		}
